...
        self.tableView.delegate = self
        self.tableView.dataSource = self
        self.tableView.estimatedRowHeight = 150
        self.tableView.rowHeight = UITableView.automaticDimension
        self.tableView.tableFooterView = UIView(frame: .zero)
        self.tableView.isAccessibilityElement = true
        self.tableView.accessibilityIdentifier = "table--articleTableView"
    }
    
    func reloadTableViewData() {
        self.tableView.reloadData()
    }
    
...
